<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/purple_200">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_title"
            android:textSize="28dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="120dp"
            android:textStyle="bold"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#A769F3"/>

        <Button
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:id="@+id/log"
            android:text="@string/login"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:drawableRight="@drawable/next"
            android:paddingLeft="20dp"
            android:background="@drawable/btn1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#555555"
            android:textSize="24dp"
            android:drawableStart="@drawable/bitian"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/_10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_passwd"
            android:textColor="#555555"
            android:textSize="24dp"
            android:drawableStart="@drawable/bitian"/>

        <EditText
            android:id="@+id/passwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/_6_12"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_r_passwd"
        android:textColor="#555555"
        android:textSize="24dp"
        android:drawableStart="@drawable/bitian"/>

    <EditText
        android:id="@+id/r_passwd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_phone"
                android:textColor="#555555"
                android:textSize="24dp"
                android:drawableStart="@drawable/bitian"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox1"
            android:id="@+id/cb_login"
            android:textSize="18dp"
            android:textColor="#555555"
            android:layout_marginLeft="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_eamil"
            android:textColor="#555555"
            android:textSize="24dp"
            android:drawableStart="@drawable/bitian"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/sex"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_margin="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="#555555"
                android:textSize="24dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_boy"
                android:textColor="#555555"
                android:textSize="24dp"
                android:id="@+id/sex_boy"
                android:layout_marginLeft="30dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_girl"
                android:textColor="#555555"
                android:textSize="24dp"
                android:id="@+id/sex_girl"
                android:layout_marginLeft="30dp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_city"
                android:textColor="#555555"
                android:textSize="24dp" />

            <Spinner
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:minHeight="50dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_school"
                android:textColor="#555555"
                android:textSize="24dp" />

            <AutoCompleteTextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/school"
                android:minHeight="50dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_birdata"
                android:textColor="#555555"
                android:textSize="24dp" />

            <Button
                android:id="@+id/birdata"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:onClick="buttonFunc"
                android:textSize="24dp"
                android:text="@string/reg_birtdata_btn"/>


        </LinearLayout>


            <Button
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:text="@string/reg"
                android:textColor="@color/white"
                android:id="@+id/btn_reg"
                android:textSize="24dp"
                android:layout_margin="25dp"
                android:background="@drawable/btn2"/>




    </LinearLayout>


</LinearLayout>