<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@color/purple_200"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dia_context"
        android:text="@string/Orexit"
        android:gravity="center"
        android:textSize="24dp"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dia_yes"
        android:text="@string/yes"
        android:background="@drawable/btn2"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="24dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dia_no"
        android:text="@string/no"
        android:background="@drawable/btn2"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginLeft="40dp"/>

    </LinearLayout>

</LinearLayout>