<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/purple_200">

        <Button
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:id="@+id/chat_back"
            android:text="@string/back"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/back"
            android:paddingRight="20dp"
            android:background="@drawable/btn1"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#A769F3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendname"
            android:id="@+id/box_name_friend"
            android:textSize="28dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginRight="20dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#A769F3"/>

        <Button
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:id="@+id/add_friend"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/del_friend"
            android:paddingLeft="20dp"
            android:background="@drawable/btn1"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/inputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pleasetext"
            android:maxLines="2" />


        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn2"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </LinearLayout>

</LinearLayout>